<resources>
    <string name="app_name">FoodWizard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--real string values-->
    <string name="food_wizard">Food Wizard</string>
    <string name="title_activity_login">Login</string>
    <string name="back">Back</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_password">Password</string>
    <string name="title_activity_register_username">Username</string>
    <string name="title_activity_register_email">Email</string>
    <string name="title_activity_register_confirmPassword">Confirm password</string>
    <!--record part-->
    <string name="record_main">Record\nToday\'s\nMeal:</string>
    <string name="record_detail">Meal Details:</string>
    <string name="record_upload">Upload</string>
    <string name="record_meal">Upload your meal ^^</string>
    <string name="try_again">Try Again</string>
    <string name="signIn_error"> invalid account or password</string>
    <string name="success">Success</string>
    <string name="signIn_success">Sign in success</string>
    <string name="add_meal"> Add Meal</string>
    <string name="see_detail"> See detail</string>
    <!--recipe part-->
    <string name="recommend_Recipe">Recommend\nRecipe</string>
    <string name="chat_gpt">Chat with ChatGPT</string>
    <!--shop part-->
    <string name="special_offer">Special\nOffer</string>
    <!--price part-->
    <string name="url_button">Click here to buy!</string>
    <string name="product">Product</string>
    <string name="mysymbol">$</string>
    <string name="logo_text">FoodWizards</string>
    <!--personal info part -->
    <string name="changeEmail">Change Email</string>
    <string name="changePassword">Change Password</string>
    <string name="changeDietPlan">Change Diet Plan</string>
    <string name="enterNew">Enter new</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="dietPlan">Diet Plan</string>
    <string name="update">Update</string>
    <string name="dietPlanLabel">Diet Plan</string>
    <string name="emailLabel">email</string>
    <string name="passwordLabel">password</string>
    <string name="log_out">Log out</string>
    <string name="hover_button_image">Hover Button Image</string>
    <!--personal info-->
    <string name="personal_info">Personal\nInformation</string>
    <string name="my_plan">My plan</string>
    <!--nutrition-->
    <string name="fat_intake">Fat Daily Intake</string>
    <string name="calory_intake">Calory Daily Intake</string>
    <string name="protein_intake">Protein Daily Intake</string>
    <string name="carb_intake">Carb Daily Intake</string>
    <!--speech -->
    <string name="send_message_box_hint">What would you like to ask?</string>
    <string name="register_success">User Created Successfully</string>
    <string name="register_fail">\"Create User failed - \"</string>
    <string name="register_empty_fields">Please fill all fields</string>
    <string name="empty_input">Input is null or empty</string>
    <string name="password_too_short">Change password failed, password length must be at least 6</string>
    <string name="password_change_success">Successfully changed password</string>
    <string name="password_change_fail">Change password failed</string>
    <string name="email_change_fail">Change email failed, not a valid email address</string>
    <string name="email_change_success">Successfully changed email</string>
    <string name="general_email_change_fail">Change email failed - </string>
    <string name="log_out_message">Logged out</string>

</resources>