<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@color/welcome_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:rotationY="180"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/topleaf" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="186dp"
        android:layout_height="173dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/botleaf" />

    <TextView
        android:id="@+id/title"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="top"
        android:text="@string/title_activity_login"
        android:textAppearance="@style/food_wizard"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/account"
        style="@style/wizard_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:drawableRight="@drawable/account"
        android:drawablePadding="5dp"
        android:ems="13"
        android:hint="@string/title_activity_register_username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/password"
        style="@style/wizard_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/lock"
        android:drawablePadding="5dp"
        android:ems="13"
        android:hint="@string/title_activity_register_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <Button
        android:id="@+id/login"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/wizard_button"
        android:text="Log In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <Button
        android:id="@+id/back"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/wizard_button"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>